C1: assert(false) failed: live_in set of first block must be empty

XMLWordPrintable

    • b30

        The attached JavaFuzzer test fails with the following assertion:

        To reproduce:
        $ java -XX:+DeoptimizeALot Test.java
        $ java -XX:+DeoptimizeALot Reduced.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S124123/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/57294efe-464f-4c0a-b55a-fd67bfa32e7b/runs/71c23d41-87fd-4de4-92b5-4ba130c3e1dd/workspace/open/src/hotspot/share/c1/c1_LinearScan.cpp:858), pid=28693, tid=28707
        # assert(false) failed: live_in set of first block must be empty
        #
        # JRE version: Java(TM) SE Runtime Environment (18.0+7) (fastdebug build 18-ea+7-268)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+7-268, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x79335c] LinearScan::compute_global_live_sets()+0xc8c
        ............
        Command Line: -XX:+DeoptimizeALot --add-modules=ALL-DEFAULT jdk.compiler/com.sun.tools.javac.launcher.Main Test.java
        ............
        Current thread (0x00007fc8b41dca20): JavaThread "C1 CompilerThread0" daemon [_thread_in_native, id=28707, stack(0x00007fc885638000,0x00007fc885739000)]


        Current CompileTask:
        C1: 2738 1445 % ! 3 Test::mainTest @ 452 (1251 bytes)

        Stack: [0x00007fc885638000,0x00007fc885739000], sp=0x00007fc885736dc0, free space=1019k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x79335c] LinearScan::compute_global_live_sets()+0xc8c
        V [libjvm.so+0x7b5594] LinearScan::do_linear_scan()+0xe4
        V [libjvm.so+0x6e1bc9] Compilation::emit_lir()+0xb59
        V [libjvm.so+0x6e458f] Compilation::compile_java_method()+0x3ff
        V [libjvm.so+0x6e51a0] Compilation::compile_method()+0x1d0
        V [libjvm.so+0x6e5bbf] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x36f
        V [libjvm.so+0x6e7013] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1a3
        V [libjvm.so+0xa0aab9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xef9
        V [libjvm.so+0xa0b7e8] CompileBroker::compiler_thread_loop()+0x598
        V [libjvm.so+0x186829c] JavaThread::thread_main_inner()+0x27c
        V [libjvm.so+0x186eb90] Thread::call_run()+0x100
        V [libjvm.so+0x1551464] thread_native_entry(Thread*)+0x104

          1. hs_err_pid28693.log
            77 kB
          2. FuzzerUtils.java
            13 kB
          3. Test.java
            15 kB
          4. Reduced.java
            1.0 kB
          5. 8271202.pdf
            877 kB

              Assignee:
              Igor Veresov
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: