8271202: C1: assert(false) failed: live_in set of first block must be empty